api-server.yaml
#================DEPLOYMENT===================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unite-api
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unite-api
  template:
    metadata:
      labels:
        app: unite-api
    spec:
      containers:
      - name: unite-api
        image: pradeepkundekar0101/unite-api
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"


---
#================SERVICE===================
apiVersion: v1
kind: Service
metadata:
  name: unite-api-service
  namespace: prod
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000 
    protocol: TCP
  selector:
    app: unite-api
