ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unite-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true
spec:
  rules:
  - http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: unite-api-service
            port:
              number: 80
      - path: /ws-connect
        pathType: Prefix
        backend:
          service:
            name: unite-ws-service
            port:
              number: 80
